--- a/02-10-2019/02-10-2019.ipynb
+++ b/02-10-2019/02-10-2019.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -44,7 +44,7 @@
        "1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,18 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n"
+     ]
     }
    ],
    "source": [
@@ -93,9 +91,91 @@
     "        return 1\n",
     "    else:\n",
     "        return 0\n",
-    "email(\"srivasavi464@gmail.com\")\n",
-    "email(\"Asfdwtf121@gmail.com\")\n",
-    "    "
+    "print(email(\"srivasavi464@gmail.com\")) \n",
+    "print(email(\"sreevasavi1113.com\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'vasavi': ['9849529682', 'srivasavi4642@gmail.com'],\n",
+       " 'siri': ['987654321', 'repallesireesha495@gmail.com'],\n",
+       " 'sarala': ['876543290', 'sarala456@gmail.com']}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "contact={\"vasavi\":[\"9849529682\",\"srivasavi4642@gmail.com\"],\"siri\":[\"987654321\",\"repallesireesha495@gmail.com\"],\"sarala\":[\"876543290\",\"sarala456@gmail.com\"]}\n",
+    "def addcontact(name,l):\n",
+    "    if name not in contact:\n",
+    "        no=l[0]\n",
+    "        id=l[1]\n",
+    "        if phoneno(no)==1:\n",
+    "            print(\"\")\n",
+    "            if email(id)==1:\n",
+    "                contact[name]=l\n",
+    "        else:\n",
+    "            print(\"enter a valid no and emailid\")\n",
+    "    else:\n",
+    "        print(\"contact already exists\")\n",
+    "addcontact(\"teja\",[\"7780692163\",\"srivasavi4641@gmail.com\"]) \n",
+    "contact"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "phonenumber is verified succesfully\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'vasavi': ['9849529682', 'srivasavi4642@gmail.com'],\n",
+       " 'siri': ['987654321', 'repallesireesha495@gmail.com'],\n",
+       " 'sarala': ['876543290', 'sarala456@gmail.com']}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "contact={\"vasavi\":[\"9849529682\",\"srivasavi4642@gmail.com\"],\"siri\":[\"987654321\",\"repallesireesha495@gmail.com\"],\"sarala\":[\"876543290\",\"sarala456@gmail.com\"]}\n",
+    "def addcontact(name,l):\n",
+    "    if name not in contact:\n",
+    "        no=l[0]\n",
+    "        id=l[1]\n",
+    "        if phoneno(no)==1:\n",
+    "            print(\"phonenumber is verified succesfully\")\n",
+    "    \n",
+    "            if email(id)==1:\n",
+    "                print(\"email verified succesfully\")\n",
+    "                contact[name]=l\n",
+    "            else:\n",
+    "                print(\"enter a valid no and emailid\")\n",
+    "    else:\n",
+    "        print(\"contact already exists\")\n",
+    "addcontact(\"teja\",[\"7780692163\",\"srivasavi464@gmail.com\"]) \n",
+    "contact"
    ]
   },
   {
