--- a/16-10-2019/16-10-2019.ipynb
+++ b/16-10-2019/16-10-2019.ipynb
@@ -168,13 +168,857 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functional programming\n",
+    "* procedure-c\n",
+    "* scripting-php,java,python,shell\n",
+    "* Listor dictionariesor tuplesor sets comphrehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "1 2 3 4 5 6 7 8 9 10 "
+     ]
+    }
+   ],
+   "source": [
+    "# print n natural numbers\n",
+    "n=int(input())\n",
+    "for i in range(1,n+1):\n",
+    "    print(i,end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lst comprehension\n",
+    "#=>expression for list in item condition\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n=int(input())\n",
+    "li=[i for i in range(1,n+1)]\n",
+    "li"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a p s s d c "
+     ]
+    }
+   ],
+   "source": [
+    "a=\"apssdc\"\n",
+    "for i in a:\n",
+    "    print(i,end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'p', 's', 's', 'd', 'c']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=[s for s in a]\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'GOOGLE.COM'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=\"google.com\"\n",
+    "s=a.upper()\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['G', 'O', 'O', 'G', 'L', 'E', '.', 'C', 'O', 'M']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f=[i.upper() for i in s]\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 "
+     ]
+    }
+   ],
+   "source": [
+    "x=\"123abcDEF\"\n",
+    "for i in x:\n",
+    "    if i.isdigit():\n",
+    "        print(i,end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a b c D E F "
+     ]
+    }
+   ],
+   "source": [
+    "for i in x:\n",
+    "    if i.isalpha():\n",
+    "        print(i,end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'D', 'E', 'F']\n",
+      "['1', '2', '3']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[n for n in x if n.isalpha()]\n",
+    "ln=[n for n in x if n.isdigit()]\n",
+    "print(l)\n",
+    "print(ln)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "[1.0, 1.4142135623730951, 1.7320508075688772, 2.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input())\n",
+    "l=[i**(1/2) for i in range(1,n+1)]\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "1.0 1.4142135623730951 1.7320508075688772 2.0 2.23606797749979 2.449489742783178 "
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input())\n",
+    "for i in range(1,n+1):\n",
+    "    print(i**(1/2),end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 1.4142135623730951, 1.7320508075688772, 2.0, 2.23606797749979]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "n=5\n",
+    "l=[]\n",
+    "for i in range(1,n+1):\n",
+    "    l.append(math.sqrt(i))\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[441, 484, 529, 576, 625, 676, 729, 784, 841, 900]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k=[i*i for i in range (21,31)]\n",
+    "k\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[68921, 74088, 79507, 85184, 91125, 97336, 103823, 110592, 117649, 125000]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[i**3 for i in range(41,51)]#cubes\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "[1, 2, 6, 24, 120]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#factorial\n",
+    "def fact(n):\n",
+    "    l=[]\n",
+    "    f=1\n",
+    "    for i in range(1,n+1):\n",
+    "        f=f*i\n",
+    "        l.append(f)\n",
+    "    print(l)\n",
+    "n=int(input())            \n",
+    "fact(n)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[1]\n",
+      "[1, 2]\n",
+      "[1, 2, 6]\n",
+      "[1, 2, 6, 24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[fact(i) for i in range(5)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odd 11\n",
+      "even 12\n",
+      "odd 13\n",
+      "even 14\n",
+      "odd 15\n",
+      "even 16\n",
+      "odd 17\n",
+      "even 18\n",
+      "odd 19\n",
+      "even 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(11,21):\n",
+    "    if i%2==0:\n",
+    "        print(\"even\",i)\n",
+    "    else:\n",
+    "        print(\"odd\",i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 14, 16, 18, 20]\n",
+      "[11, 13, 15, 17, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[i for i in range(11,21) if i%2==0]\n",
+    "b=[i for i in range(11,21) if i%2!=0]\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20]"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q_l=[i for i in range(1,21) if i%2==0 if i%5==0]\n",
+    "q_l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2004, 2008, 2012, 2016, 2020]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lwap year between 2000-2020\n",
+    "a=[i for i in range(2001,2021) if i%4==0 and i%100!=0 or i%400==0]\n",
+    "print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lambda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Anonymous function\n",
+    "# syntax....>lambda arguments:expression\n",
+    "def square(n):\n",
+    "    n**2\n",
+    "square(3)\n",
+    "d=lambda n:n**2\n",
+    "print(d(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "d=lambda b:b**3\n",
+    "print(d(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,4,5]\n",
+    "l1=[]\n",
+    "for i in range(len(l)):\n",
+    "    a=l[i]**2\n",
+    "    l1.append(a)\n",
+    "print(l1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[l[i]**2 for i in range(len(l))]\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iterators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,4]\n",
+    "for i in l:\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Iter(),next()\n",
+    "a=iter(l)\n",
+    "print(next(a))\n",
+    "print(next(a))\n",
+    "print(next(a))\n",
+    "print(next(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "7\n",
+      "5\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Yield,next\n",
+    "def add(a,b):\n",
+    "    c=a+b\n",
+    "    yield c\n",
+    "    a+=1\n",
+    "    b+=1\n",
+    "    c=a+b\n",
+    "    yield c\n",
+    "d=add(2,3)\n",
+    "print(next(d))\n",
+    "print(next(d))\n",
+    "for i in add(2,3):\n",
+    "    \n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Map    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Syntax......>(function,iterable)\n",
+    "def square(n):\n",
+    "    return n**2\n",
+    "l=[1,2,3,4,5]\n",
+    "print(list(map(square,l)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,4,5]\n",
+    "print(list(map(lambda x:x**2,l)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#addition of two numbers\n",
+    "t=(1,2,3,4)\n",
+    "t1=(1,2,3,4)\n",
+    "print(list(map(lambda a,b:a+b,t,t1)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=[1,2,3,4,5,6,7,8]\n",
+    "a=list(filter(lambda x:x%2==0,l))\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=[1,2,3,'a','b']\n",
+    "a=list(filter(lambda x:str(x).isdigit(),l))\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=[1,2,3,'a','b']\n",
+    "l1=[]\n",
+    "for i in l:\n",
+    "    if str(i).isdigit():\n",
+    "        l1.append(i)\n",
+    "def digit(n):\n",
+    "        if str(n).isdigit():\n",
+    "            return True\n",
+    "        return False\n",
+    "a=list(filter(digit,l))\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=list(range(10))\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def prime(n):\n",
+    "    fact=0\n",
+    "    for i in range(1,n+1):\n",
+    "        if n%i==0:\n",
+    "            fact=fact+1\n",
+    "    if fact==2:\n",
+    "            return 1            \n",
+    "    return 0\n",
+    "print(list(filter(prime,l)))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def removecontact(file) "
-   ]
+   "source": []
   }
  ],
  "metadata": {
